--- a/css/style.css
+++ b/css/style.css
@@ -5,15 +5,24 @@
     --purple: #7278c3;
     --blue: #00a8dc;
 }
+
 *{
     margin: 0;
     padding: 0;
 }
+
 body{
     /* chamando variaveis */
     background-color: var(--background);
     font-family: 'Titillium Web', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
+    color: white;
 }
+
+a{
+    text-decoration: none;
+    color: white;
+}
+
 .gradient{
     background: rgba(252,30,137,1);
     background: -moz-linear-gradient(left, rgba(252,30,137,1) 0%, rgba(114,119,195,1) 100%);
@@ -23,4 +32,33 @@ body{
     background: -ms-linear-gradient(left, rgba(252,30,137,1) 0%, rgba(114,119,195,1) 100%);
     background: linear-gradient(to right, rgba(252,30,137,1) 0%, rgba(114,119,195,1) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fc1e89', endColorstr='#7277c3', GradientType=1 );
+}
+
+.container{
+    width: 80%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+header .container{
+    display: flex;
+    padding: 20px 0px;
+}
+
+header ul{
+    display: flex;
+    list-style-type: none;
+    justify-content: space-evenly;
+}
+
+header nav{
+    width: 60%; 
+}
+
+header a{
+    text-transform: uppercase;
+}
+
+header img{
+    margin-right: 100px;
 }
