Sessao sobre finalizada

--- a/css/style.css
+++ b/css/style.css
@@ -145,12 +145,44 @@ header img{
     margin-bottom: 35px;
 }
 
-.sobre{
+.sobre_fundo{
     background-image: url(../img/Imagens/Teams/T6.jpg);
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
     width: 100%;
-    min-height: 200px;
+    min-height: 500px;
     clip-path: polygon(0 10%, 100% 0%, 100% 90%, 0% 100%);
+    
+}
+.sobre_fundo_filtro{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);
+}
+
+.sobre{
+    position: relative;
+    display: flex;
+}
+.sobre img{
+    position: absolute;
+    z-index: 99;
+    top: -20px;
+    left: 100px;
+    width: 100%;
+    max-width: 35%;
+}
+.texto_sobre{
+    width: 40%;
+    margin-right: 100px;
+    text-align: end;
+    text-shadow: 0px 0px 3px #000;
+}
+
+.texto_sobre h2{
+    margin-bottom: 2em;
 }
