--- a/css/style.css
+++ b/css/style.css
@@ -174,7 +174,7 @@ header img{
     top: -20px;
     left: 100px;
     width: 100%;
-    max-width: 35%;
+    max-width: 30%;
 }
 .texto_sobre{
     width: 40%;
@@ -185,4 +185,74 @@ header img{
 
 .texto_sobre h2{
     margin-bottom: 2em;
+}
+
+.content{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 150px;
+}
+
+.content section{
+    width: 60%;
+}
+
+.card{
+    width: 100%;
+    margin-bottom: 2em;
+    box-shadow: 0px 3px 10px #000;
+    display: flex;
+    justify-content: flex-start;
+    background: rgb(0,0,0);
+    background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(30,28,33,1) 30%, rgba(30,28,33,1) 100%);
+}
+
+.card img{
+    width: 220px;
+    height: 220px;
+    object-fit: cover;
+}
+
+.card div{
+    padding: 2em;
+}
+
+.card div:hover{
+    background-color: var(--blue);
+    transition-duration: 0.5s;
+    transition-timing-function: ease-in;
+}
+.content article{
+    width: 25%;
+
+}
+
+.resultados_box{
+    padding: 2em;
+    box-shadow: 0px 3px 10px #000;
+}
+
+.resultado div{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.resultado img{
+    width: 30px;
+}
+.resultado p{
+    font-size: 1.7em;
+    margin: 0.1em 0;
+}
+
+.resultado{
+    margin-bottom: 1.2em;
+    text-align: center;
+}
+
+.content h3{
+    text-transform: uppercase;
+    padding: 1em 0;
+    font-size: 1.8em;
 }
