--- a/css/style.css
+++ b/css/style.css
@@ -256,3 +256,8 @@ header img{
     padding: 1em 0;
     font-size: 1.8em;
 }
+
+.footer{
+    background-color: #000;
+    box-shadow:  0px -6px 10px #000;
+}
