--- a/css/style.css
+++ b/css/style.css
@@ -425,6 +425,10 @@ select{
     margin:2em auto;
 }
 
+header .fa-bars{
+    display: none;
+}
+
 /* inicio responsividade */
 /* 800px */
 
@@ -483,9 +487,47 @@ select{
 
 
 /* inicio responsividade */
-/* 460px */
+/* 460px - Mobile */
 
-@media(max-width: 800px){
+@media(max-width: 460px){
+    header .fa-bars{
+        color: var(--purple);
+        font-size: 3em;
+        display: block;
+    }
+    header .container div{
+        display: flex;
+        justify-content: space-around;
+
+    }
+
+    header .container div a{
+        margin-left: 7em;
+        margin-top: 1em;
+    }
+
+     #menu{
+        position: absolute;
+        top: 5.5em;
+        left: 0;
+        width: 100%;
+        background-color: var(--purple);
+        display: none;
+     }
+
+     #menu ul{
+        flex-direction: column;
+        height: 300px;
+        margin-left: 1em;
+     }
+     
+     #menu a{
+        display: block;
+        padding: 0.5em 0;
+        /* background-color: var(--blue); */
+    }
+
+     
 
 }
 /* fim media query 460px */
