--- a/css/style.css
+++ b/css/style.css
@@ -152,6 +152,12 @@ header img{
     margin-bottom: 35px;
 }
 
+.ligas_imagens{
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+
 .sobre_fundo{
     background-image: url(../img/Imagens/Teams/T6.jpg);
     background-position: center;
@@ -502,7 +508,7 @@ header .fa-bars{
     }
 
     header .container div a{
-        margin-left: 7em;
+        margin-left: 4em;
         margin-top: 1em;
     }
 
@@ -527,7 +533,91 @@ header .fa-bars{
         /* background-color: var(--blue); */
     }
 
-     
+    .partidas .container{
+        width: 97%;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .em_andamento{
+        width: 37%;
+        align-self: flex-start;
+        margin-left: 1em;
+
+    }
+
+    .proximas_partidas{
+        width: 90%;
+    }
+
+    .partida img{
+        width: 30px;
+        padding: 0 10px;
+    }
+
+    .banner{
+        height: 250px;
+    }
+
+    .banner img{
+        max-width: 100px;
+    }
+
+    .ligas{
+        flex-direction: column;
+    }
+
+    .ligas div:nth-child(1){
+        display: flex;
+    }
+
+    .ligas h4, .ligas h3{
+        font-size: 2em;
+        line-height: 20px;
+        margin-right: 0.5em;
+    }
+
+    .sobre img{
+        display: none;
+    }
+
+    .texto_sobre{
+        width: 90%;
+    }
+    .content{
+        flex-direction: column;
+        width: 95%;
+    }
+
+    .content section{
+        width: 90%;
+        margin: auto;
+    }
+
+    .content article{
+        width: 100%;
+    }
+
+    .card{
+        flex-direction: column;
+        margin-bottom: 1em;
+    }
+
+    .card img{
+        width: 100%;
+        margin-left: 0px;
+    }
+
+    .card div{
+        padding: 1em;
+    }
+
+    footer .container{
+        flex-direction: column;
+        align-items: flex-start;
+        padding-left: 1em;
+    }
 
 }
 /* fim media query 460px */
